--- a/src/app/components/pokemon-detail/pokemon-detail.component.scss
+++ b/src/app/components/pokemon-detail/pokemon-detail.component.scss
@@ -3,6 +3,13 @@
   width: 200px;
 }
 
+.pokemonName {
+  height: 100px;
+  text-align: end;
+}
 hr {
-  height: 2px
+  border: none;
+  height: 2px;
+  color: #333;
+  background-color: #ee1515;
 }
