--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-dark bg-danger mb-4">
+<nav class="navbar navbar-expand-md navbar-dark mb-4">
   <div class="container">
     <a routerLink="/" class="navbar-brand">Pokemon App</a>
     <button
